k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tree-rest
  namespace: tree
spec:
  selector:
    app: tree_rest
  ports:
  - port: 80
    targetPort: http
