k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "tree-rest"
  namespace: tree
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: local.ecosia.org
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: tree-rest
              port:
                number: 80
